--- a/views/itemInstance_form.pug
+++ b/views/itemInstance_form.pug
@@ -25,11 +25,10 @@ block content
           each item in item_list
             //- handle post where instance exist
             if instance
-              - console.log('instance not undefined')
               option(
                 value=item._id, 
                 selected=(
-                  (instance.item.toString()==item.id) 
+                  (instance.item.id==item.id) 
                   ? 'selected' : false
                 )
               ) #{item.name}
