--- a/views/itemInstance_list.pug
+++ b/views/itemInstance_list.pug
@@ -12,4 +12,4 @@ block content
         a(href=itemInstance.url) #{itemInstance.item.name} in #[strong #{itemInstance.store}]
 
     else
-      li There are no instances registered.
+      div There are no instances registered.
